--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,4 +14,19 @@ body {
   background-color: #aabbcc;
 }
 
+/**
+ * Icons
+ */
+.svg-icon {
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  #fill: #828282;
+  fill: #ffffff;
+  padding-right: 5px;
+  vertical-align: text-top; }
+
+.social-media-list li + li {
+  padding-top: 5px; }
+
 
