--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,8 +30,7 @@ body {
   width: 16px;
   height: 16px;
   display: inline-block;
-  #fill: #828282;
-  fill: #ffffff;
+  fill: #828282;
   padding-right: 5px;
   vertical-align: text-top; }
 
