--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,4 +40,28 @@ body {
       padding-right: 15px;
       padding-left: 15px; } }
 
+.post-title {
+  font-size: 42px;
+  letter-spacing: -1px;
+  line-height: 1; }
+  @media screen and (max-width: 650px) {
+    .post-title {
+      font-size: 36px; } }
 
+.post-content {
+  margin-bottom: 30px; }
+  .post-content h2 {
+    font-size: 32px; }
+    @media screen and (max-width: 650px) {
+      .post-content h2 {
+        font-size: 28px; } }
+  .post-content h3 {
+    font-size: 26px; }
+    @media screen and (max-width: 650px) {
+      .post-content h3 {
+        font-size: 22px; } }
+  .post-content h4 {
+    font-size: 20px; }
+    @media screen and (max-width: 650px) {
+      .post-content h4 {
+        font-size: 18px; } }
