--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,35 +33,9 @@ body {
   margin-left: auto;
   padding-right: 30px;
   padding-left: 30px; }
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: 800px) {
     .wrapper {
-      max-width: -webkit-calc(650px - (30px));
-      max-width: calc(650px - (30px));
+      max-width: -webkit-calc(800 - (30px));
+      max-width: calc(800 - (30px));
       padding-right: 15px;
       padding-left: 15px; } }
-
-.post-title {
-  font-size: 42px;
-  letter-spacing: -1px;
-  line-height: 1; }
-  @media screen and (max-width: 650px) {
-    .post-title {
-      font-size: 36px; } }
-
-.post-content {
-  margin-bottom: 30px; }
-  .post-content h2 {
-    font-size: 32px; }
-    @media screen and (max-width: 650px) {
-      .post-content h2 {
-        font-size: 28px; } }
-  .post-content h3 {
-    font-size: 26px; }
-    @media screen and (max-width: 650px) {
-      .post-content h3 {
-        font-size: 22px; } }
-  .post-content h4 {
-    font-size: 20px; }
-    @media screen and (max-width: 650px) {
-      .post-content h4 {
-        font-size: 18px; } }
