--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,3 +22,34 @@ body {
   min-height: 100vh;
   flex-direction: column;
 }
+
+/**
+ * Images
+ */
+img {
+  max-width: 100%;
+  vertical-align: middle; }
+
+/**
+ * Figures
+ */
+figure > img {
+  display: block; }
+
+figcaption {
+  font-size: 14px; }
+
+figure {
+  float: middle;
+  width: 95%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  border: thin silver solid;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+img.scaled {
+  width: 95%;
+}
