--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,12 +43,12 @@ figure {
   float: middle;
   width: 95%;
   text-align: center;
-  font-style: italic;
   font-size: smaller;
   text-indent: 0;
-  border: thin silver solid;
+  border: thick black solid;
   margin: 0.5em;
   padding: 0.5em;
+  background-color: #ffffff;
 }
 img.scaled {
   width: 95%;
