--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,15 +37,15 @@ figure > img {
   display: block; }
 
 figcaption {
-  font-size: 14px; }
+  font-size: 12px; }
 
 figure {
   float: middle;
   width: 95%;
-  text-align: center;
+  text-align: left;
   font-size: smaller;
   text-indent: 0;
-  border: thick black solid;
+  border: 2px black solid;
   margin: 0.5em;
   padding: 0.5em;
   background-color: #ffffff;
