--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,14 +40,14 @@ figcaption {
   font-size: 12px; }
 
 figure {
-  float: middle;
+  #float: middle;
   width: 95%;
   text-align: left;
   font-size: smaller;
   text-indent: 0;
   border: 2px black solid;
-  margin: 1em;
-  padding: 1em;
+  margin: 0.5em;
+  padding: 0.5em;
   background-color: #ffffff;
 }
 img.scaled {
