--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,7 @@ figcaption {
   font-size: 12px; }
 
 figure {
-  #float: middle;
+  float: middle;
   width: 85%;
   text-align: left;
   font-size: smaller;
