--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,7 +28,9 @@ body {
  */
 img {
   max-width: 90%;
-  vertical-align: middle; }
+  vertical-align: middle; 
+  display: block;
+}
 
 /**
  * Figures
