--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,10 +26,13 @@ body {
 /**
  * Images
  */
+
+figure > img {
+  display: block; }
+
 img {
   max-width: 90%;
   vertical-align: middle; 
-  display: block;
 }
 
 /**
@@ -41,7 +44,7 @@ figcaption {
 
 figure {
   float: middle;
-  width: 85%;
+  width: 80%;
   text-align: left;
   font-size: smaller;
   text-indent: 0;
@@ -51,5 +54,5 @@ figure {
   background-color: #ffffff;
 }
 img.scaled {
-  width: 85%;
+  width: 80%;
 }
