--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,11 +47,13 @@ figure {
   width: 80%;
   text-align: left;
   font-size: smaller;
-  text-indent: 0;
+  text-indent: 10px;
   border: 2px black solid;
   margin: 0.5em;
   padding: 0.5em;
   background-color: #ffffff;
+  padding-bottom: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 img.scaled {
   width: 80%;
