--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,7 +52,8 @@ figure {
   margin: 0.5em;
   padding: 0.5em;
   background-color: #ffffff;
-  padding-bottom: 0.5em;
+  padding-left: 0.5em;
+  padding-top: 0.5em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 img.scaled {
