--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,7 +53,9 @@ figure {
   padding: 0.5em;
   background-color: #ffffff;
   padding-left: 0.5em;
+  padding-right: 0.5em;
   padding-top: 0.5em;
+  padding-bottome: 0.5em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 img.scaled {
