--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,10 +52,10 @@ figure {
   margin: 0.5em;
   padding: 10em;
   background-color: #ffffff;
-  padding-left: 2em;
-  padding-right: 2em;
-  padding-top: 2em;
-  padding-bottome: 2em;
+  #padding-left: 2em;
+  #padding-right: 2em;
+  #padding-top: 2em;
+  #padding-bottom: 2em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 img.scaled {
