--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,7 +54,7 @@ figure {
   border: 2px black solid;
   margin: 0.5em;
   padding: 1em;
-  padding-bottom: 1em;
+  #padding-bottom: 1em;
   background-color: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
