--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,8 +52,8 @@ figure {
   font-size: smaller;
   text-indent: 0;
   border: 2px black solid;
-  #margin: 0.5em;
-  #padding: 0.5em;
+  margin: 0.5em;
+  padding: 0.5em;
   background-color: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
