--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,11 +48,11 @@ figcaption {
 figure {
   #float: middle;
   #width: 100%;
-  text-align: left;
+  text-align: justify;
   font-size: smaller;
   text-indent: 0;
   border: 2px black solid;
-  margin: 5.5em;
+  margin: 2.5em;
   padding: 0.5em;
   background-color: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
