--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,3 +57,15 @@ figure {
   background-color: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.article {
+	counter-reset: figures;
+}
+
+.figure figcaption {
+	counter-increment: figures;
+}
+
+.figure figcaption:before {
+	content: 'Fig. ' counter(figures): ;
+}
