--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,14 +58,12 @@ figure {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.article {
+.numbered-figures { 
 	counter-reset: figures;
 }
-
-.figure figcaption {
-	counter-increment: figures;
+.numbered-figures .figure figcaption { 
+	counter-increment: figures; 
 }
-
-.figure figcaption:before {
-	content: 'Fig. ' counter(figures) ':' ;
+.numbered-figures .figure figcaption:before { 
+	content: 'Fig. ' counter(figures) ' - '; 
 }
