--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,5 +68,5 @@ figure {
 
 figcaption:before {
   content: "Fig. " counter(figures) ": "; /* For I18n support; use data-counter-string. */
-  font: bold;
+  font-weight: bold;
 }
