--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,8 @@ layout: default
   {% if page.next %}
     <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} &raquo; </a>
   {% endif %}
-  <a href=#top>Go to top</a>
+  <a href=#top>Top</a>
+  <a href=#home>Home</a>
+  
 
 </div>
