--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,9 +20,9 @@ layout: default
 
   {% if page.next %}
     <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} &raquo; </a>
-  {% endif %}
+  {% endif %}<br>
   
-  <a href=#top>Top</a>
+  <a href=#top>Top</a><br>
   
   <a href="/">Home</a>
 
