--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,7 +45,7 @@ figure {
 }
 
 
-#Automatically numbering of figures on page
+//Automatically numbering of figures on page
 article {
   counter-reset: figures;
 }
