--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,10 +58,10 @@ figcaption:before {
   font-weight: bold;
 }
 
-hr { 
+hr.thick { 
     width: 100%; 
-    height: 0.2em; 
-    margin: 0 auto;
+    height: 5em; 
+    margin: 0.2em;
     color: #e8e8e8;
 }
 
