--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,8 +60,9 @@ figcaption:before {
 
 hr.thick { 
     width: 100%; 
-    height: 5em; 
-    margin: 0.2em;
+    height: 1em; 
+    margin: 0.5em;
     color: #e8e8e8;
+    border-radius: 5px;
 }
 
