--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,10 +59,11 @@ figcaption:before {
 }
 
 hr.thick { 
-    width: 100%; 
-    height: 1em; 
+    width: 95%; 
+    height: 0.75em; 
     margin: 0.5em;
-    color: #e8e8e8;
+    padding: 0.5em
+    color: #e8e;
     border-radius: 5px;
 }
 
