--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,7 +62,7 @@ hr.thick {
     width: 95%; 
     height: 0.75em; 
     margin: 0.5em;
-    padding: 0.5em
+    padding: 0.5em;
     color: #e8e;
     border-radius: 5px;
 }
