--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,9 +61,9 @@ figcaption:before {
 hr.thick { 
     width: 95%; 
     height: 0.75em; 
-    margin: 0.5em;
-    padding: 0.5em;
-    color: #e8e;
+    margin: 0.2em;
+    border-top: 0.1em;
+    color: #e8e8e8;
     border-radius: 5px;
 }
 
