--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -63,7 +63,7 @@ hr.thick {
     height: 0.75em; 
     margin: 0.2em;
     padding: 0.5em;
-    color: #e8e8e8;
+    color: blue;
     border-radius: 5px;
     align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
