--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,6 +62,7 @@ h3 {
     width: 100%; 
     height: 1.5em; 
     margin: 0 auto;
+    margin-bottom: 15px;
     padding: 1em;
     border-radius: 5px;
     align: center;
