--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,11 +59,11 @@ figcaption:before {
 }
 
 h3 { 
-    width: 100%; 
+    width: 95%; 
     height: 1.5em; 
     margin: 0 auto;
     margin-bottom: 15px;
-    padding: 1em;
+    //padding: 1em;
     border-radius: 5px;
     align: center;
     background-colour: #e8e8e8;
