--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -63,10 +63,10 @@ h3 {
     height: 1.5em; 
     margin: 0 auto;
     margin-bottom: 15px;
-    //padding: 1em;
+    padding: 1em;
     border-radius: 5px;
     align: center;
-    background-colour: #e8e8e8;
+    background: #e8e8e8;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
