--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -63,7 +63,7 @@ h3 {
     height: 1.5em; 
     margin: 0 auto;
     margin-bottom: 20px;
-    //padding: 1em;
+    padding: 1em;
     border-radius: 5px;
     align: center;
     background-color: #fdfdfd;
