--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,7 @@ h3 {
     padding: 1em;
     border-radius: 5px;
     align: center;
-    background-color: #111;
+    background-color: #e8e8e8;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
