--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,7 @@ figure {
   border: 2px black solid;
   margin: 2.5em;
   padding: 0.5em;
-  background-color: #ffffff;
+  background-color: #ccbbbaa;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -66,7 +66,7 @@ h3 {
     padding: 1em;
     border-radius: 5px;
     align: center;
-    background-color: #555; //colour of the hrefs
+    background-color: rgba(); //colour of the hrefs
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
