--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,7 @@ figure {
   border: 2px black solid;
   margin: 2.5em;
   padding: 0.5em;
-  background-color: #9dc4b8;
+  background-color: #CCBBAA;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
