--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,7 +72,7 @@ h3 {
 }
 
 .site-header {
-  border-top: 5px solid #9dc4b8// #424242; #text color
+  border-top: 5px solid #9dc4b8;// #424242; #text color
   border-bottom: 1px solid #e8e8e8; //color of the background of the post
   min-height: 55.95px;
   position: relative; }
