--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,13 +65,13 @@ h3 {
     margin-bottom: 20px;
     padding: 1em;
     border-radius: 5px;
-    align: center;
-    background-color: #9dc4b8; //colour of the hrefs
+    align: middle;
+    background-color: #fee18e;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
 
-.site-header {
+site-header {
   border-top: 5px solid #9dc4b8;// #424242; #text color
   border-bottom: 1px solid #e8e8e8; //color of the background of the post
   min-height: 55.95px;
