--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,7 @@ figure {
   margin: 2.5em;
   padding: 0.5em;
   background-color: #C6EAFA;
+  border-radius: 2px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
