--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,13 +60,13 @@ figcaption:before {
 }
 
 h3 { 
-    width: 95%; 
-    //height: 1.5em; 
+    width: 98%; 
+    height: 1.5em; 
     margin: 0 auto;
     margin-bottom: 20px;
     padding: 1em;
     border-radius: 5px;
-    //align: middle;
+    vertical-align: middle;
     background-color: #C6EAFA;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
