--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,7 @@ h3 {
     margin-bottom: 20px;
     padding: 1em;
     border-radius: 5px;
-    vertical-align: middle;
+    display: inline;
     text-align: center;
     background-color: #C6EAFA;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
