--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,7 @@ figure {
   border: 2px black solid;
   margin: 2.5em;
   padding: 0.5em;
-  background-color: #C6EAFA;
+  background-color: #ffffff;
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -69,6 +69,7 @@ h3 {
     text-align: center;
     display:flex;
     align-items: center;
+    vertical-align: center;
     justify-content: center;
     background-color: #C6EAFA;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
