--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,7 +71,7 @@ h3 {
     align-items: center;
     vertical-align: center;
     justify-content: center;
-    color: #069;
+    inline-height: 1.0;
     background-color: #C6EAFA;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
