--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -69,9 +69,9 @@ h3 {
     text-align: center;
     display:flex;
     align-items: center;
-    vertical-align: center;
+    vertical-align: middle;
     justify-content: center;
-    inline-height: 1.0;
+    line-height: 1.0;
     background-color: #C6EAFA;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
