--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -91,3 +91,26 @@ hr:after {
     position: relative;
     top: -13px;
 }
+
+/* Step 1: Common Properties: All required to make icons render reliably */
+.icon::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Step 2: Reference Individual Icons */
+.rocket::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f135";
+}
+
+/* Note: Make sure to include the correct weight and Unicode value for the icon */
+.tps::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f1ea";
+}
