--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,7 +109,7 @@ hr {
 
 hr:after {
     background: #111;
-    content: "\f135";
+    content: .rocket;
     padding: 0 4px;
     position: relative;
     top: -13px;
