--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,7 +109,7 @@ hr {
 
 hr:after {
     background: #111;
-    content: <i class="fa fa-rocket" aria-hidden="true"></i>;
+    content: "\f135";
     padding: 0 4px;
     position: relative;
     top: -13px;
