--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,7 +75,6 @@ h3 {
     
 }
 
-/* Step 1: Common Properties: All required to make icons render reliably */
 .icon::before {
   display: inline-block;
   font-style: normal;
@@ -84,18 +83,16 @@ h3 {
   -webkit-font-smoothing: antialiased;
 }
 
-/* Step 2: Reference Individual Icons */
-.rocket::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f135";
+.login::before {
+  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f007";
 }
 
-/* Note: Make sure to include the correct weight and Unicode value for the icon */
 .tps::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-  content: "\f1ea";
+  font-family: "Font Awesome 5 Free"; font-weight: 400; content: "\f1ea";
+}
+
+.twitter::before {
+  font-family: "Font Awesome 5 Brands"; content: "\f099";
 }
 
 hr {
@@ -113,20 +110,5 @@ hr:after {
     padding: 0 4px;
     position: relative;
     top: -13px;
-}
-
-.container:before{
-content: "";
-height: 1px;
-background: black;
-float:left;
-width:40%;
-}
-.container:after{
-content: "";
-height: 1px;
-background: black;
-float:left;
-width: 40%;
 }
 
