--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,9 +22,9 @@ layout: default
     <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} &raquo; </a>
   {% endif %}<br>
   
-  <a href=#top>Top</a><br>
+  <a href=#top><i class="fa fa-arrow-up" aria-hidden="true"></i></a><br>
   
-  <a href="/">Home</a>
+  <a href="/"><i class='fa fa-home'></i></a>
 
   
 
