--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,9 @@ layout: default
   
   <a href=#top><i class="fa fa-arrow-up" aria-hidden="true"></i></a><br>
   
-  <a href="/"><i class='fa fa-home'></i></a>
+  <a href="/"><i class='fa fa-home'></i></a><br>
+  
+  <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane" aria-hidden="true"></i></a>
 
   
 
