--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,13 +13,13 @@ layout: default
 <div class="PageNavigation">
 
   {% if page.previous %}
-    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> {{page.previous.title}}</a>
     <br>
   {% endif %}
 
 
   {% if page.next %}
-    <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} &raquo; </a>
+    <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} <i class="fa fa-arrow-circle-right" aria-hidden="true"></i> </a>
   {% endif %}<br>
   
   <a href=#top><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
