--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -106,7 +106,7 @@ hr {
 
 hr:after {
     background: #111;
-    content: "\f135";
+    content: "fa fa-rocket";
     padding: 0 4px;
     position: relative;
     top: -13px;
