--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,6 +75,23 @@ h3 {
     
 }
 
+
+h1 { 
+    width: 95%; 
+    height: 1.5em; 
+    margin: 0 auto;
+    margin-bottom: 20px;
+    padding: 1.5em;
+    border-radius: 5px;
+    text-align: center;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #347CBE;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+}
+
 .icon::before {
   display: inline-block;
   font-style: normal;
