--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -77,17 +77,19 @@ h3 {
 
 
 h2 { 
-    width: 95%; 
+    width: 95%;
+    font-size: smaller;
     height: 1.5em; 
     margin: 0 auto;
-    margin-bottom: 20px;
-    padding: 1.5em;
+    margin-bottom: 30px;
+    padding: 1em;
     border-radius: 5px;
     text-align: center;
     display:flex;
     align-items: center;
     justify-content: center;
     background-color: #347CBE;
+    opacity: 0.3;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
@@ -100,16 +102,8 @@ h2 {
   -webkit-font-smoothing: antialiased;
 }
 
-.login::before {
-  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f007";
-}
-
-.tps::before {
-  font-family: "Font Awesome 5 Free"; font-weight: 400; content: "\f1ea";
-}
-
-.twitter::before {
-  font-family: "Font Awesome 5 Brands"; content: "\f099";
+.rocket::before {
+  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f135";
 }
 
 hr {
@@ -123,7 +117,7 @@ hr {
 
 hr:after {
     background: #111;
-    content: "fa fa-rocket";
+    content: "\f135";
     padding: 0 4px;
     position: relative;
     top: -13px;
