--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -89,7 +89,7 @@ h2 {
     align-items: center;
     justify-content: center;
     background-color: #347CBE;
-    opacity: 0.3;
+    color: #111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
