--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,7 +78,6 @@ h3 {
 
 h2 { 
     width: 95%;
-    font-size: smaller;
     height: 1.5em; 
     margin: 0 auto;
     margin-bottom: 30px;
@@ -88,7 +87,7 @@ h2 {
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: #347CBE;
+    background-color: #347;
     color: #111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
