--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -92,19 +92,7 @@ h2 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
-
-.icon::before {
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-}
-
-.rocket::before {
-  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f135";
-}
-
+/*
 hr {
     border: none;
     border-top: 3px double #333;
@@ -121,4 +109,4 @@ hr:after {
     position: relative;
     top: -13px;
 }
-
+*/
