--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,7 +87,7 @@ h2 {
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(58,124,190,0.4);
+    background-color: #069;
     color: #111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
