--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,7 +87,7 @@ h2 {
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0, 0, 0.06);
+    background-color: rgba(0, 0, 0, 0.06);
     color: #111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
@@ -99,7 +99,7 @@ hr.rocket-left {
     margin-left: 0;
     border: none;
     border-top: 3px double #111;
-    color: rgb(0, 0, 0.06);
+    color: rgba(0, 0, 0, 0.06);
     overflow: visible;
     text-align: center;
     height: 5px;
@@ -111,7 +111,7 @@ hr.rocket-right {
     margin-left: 0;
     border: none;
     border-top: 3px double #111;
-    color: rgb(0, 0, 0.06);
+    color: rgba(0, 0, 0, 0.06);
     overflow: visible;
     text-align: center;
     height: 5px;
