--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,7 +111,7 @@ hr.rocket-right {
     margin-left: 0;
     border: none;
     border-top: 3px double #111;
-    background: rgba(0, 0, 0, 0.06);
+    background: rgb(170, 170, 170);
     overflow: visible;
     text-align: center;
     height: 5px;
