--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,14 +80,14 @@ h2 {
     width: 95%;
     height: 1.5em; 
     margin: 0 auto;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     padding: 1em;
     border-radius: 5px;
     text-align: center;
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.06);
+    background-color: rgb(178, 210, 225);
     color: #111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
