--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,12 +109,12 @@ h2 {
 }
 
 hr.rocket-left {
-    width: 45%;
-    text-align: left;
+    //width: 45%;
+    //text-align: left;
     //margin-left: 0;
     //border: none;
     border-top: 3px double #111;
-    color: rgba(0, 0, 0, 0.06);
+    //color: rgba(0, 0, 0, 0.06);
     //overflow: visible;
     //text-align: center;
     //height: 5px;
