--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,11 +109,11 @@ h2 {
 }
 
 hr.rocket-left {
-    //width: 45%;
+    width: 45%;
     //text-align: left;
     //margin-left: 0;
     //border: none;
-    border-top: 3px double #111;
+    border-top: 3px double #fff;
     //color: rgba(0, 0, 0, 0.06);
     //overflow: visible;
     //text-align: center;
