--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,8 +113,8 @@ hr.rocket-left {
     //text-align: left;
     //margin-left: 0;
     //border: none;
-    border-top: 3px double #fff;
-    //color: rgba(0, 0, 0, 0.06);
+    //border-top: 3px double #fff;
+    color: rgba(0, 0, 0, 0.06);
     //overflow: visible;
     //text-align: center;
     //height: 5px;
