--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -114,7 +114,7 @@ hr.rocket-left {
     //margin-left: 0;
     //border: none;
     //border-top: 3px double #fff;
-    color: rgba(0, 0, 0, 0.06);
+    //color: rgba(0, 0, 0, 0.06);
     //overflow: visible;
     //text-align: center;
     //height: 5px;
