--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,7 @@ hr.rocket-left {
     //text-align: left;
     //margin-left: 0;
     //border: none;
-    //border-top: 3px double #fff;
+    border: 3px double #111;
     //color: rgba(0, 0, 0, 0.06);
     //overflow: visible;
     //text-align: center;
