--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -88,6 +88,7 @@ h3.title {
     justify-content: center;
     background-color: rgb(178, 210, 225);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: "Cabin Sketch";
     
 }
 
