--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,8 +113,9 @@ hr.rocket-left {
     width: 45%;
     //text-align: left;
     //margin-left: 0;
-    //border: none;
-    border: 3px double #111;
+    border: none;
+    border-top: 3px double #111;
+    noshade: noshade;
     //color: rgba(0, 0, 0, 0.06);
     //overflow: visible;
     //text-align: center;
