--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -116,7 +116,7 @@ hr.rocket-left {
     border: none;
     border-top: 3px double #111;
     noshade: noshade;
-    //color: rgba(0, 0, 0, 0.06);
+    color: rgba(0, 0, 0, 0.02);
     //overflow: visible;
     //text-align: center;
     //height: 5px;
