--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,6 +72,7 @@ h3 {
     justify-content: center;
     background-color: #C6EAFA;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: "Cabin Sketch";
     
 }
 
