--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -107,6 +107,7 @@ h2 {
     background-color: rgb(178, 210, 225);
     color: #111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: "Cabin Sketch";
     
 }
 
@@ -117,7 +118,7 @@ hr.rocket-left {
     border: none;
     border-top: 3px double #111;
     noshade: noshade;
-    color: rgba(0, 0, 0, 0.02);
+    color: rgba(0, 0, 0, 0.19);
     //overflow: visible;
     //text-align: center;
     //height: 5px;
