--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 
 {{ content }}
 
-<div align="center"><i class='fa fa-home'></i><i class='fa fa-home'></i><i class='fa fa-home'></i></div>
+<div align="center"><i class='fa fa-rocket'>&nscb;</i><i class='fa fa-rocket'>&nscb;</i><i class='fa fa-rocket'>&nscb;</i></div>
 
 <hr>
 
