--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,9 @@ layout: default
 <h3 class="title">{{ page.title }}</h2>
 
 
+<div align="center"><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i></div>
+
+
 {{ content }}
 
 <div align="center"><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i></div>
