--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,10 +110,11 @@ h2 {
     font-family: "Cabin Sketch";
     
 }
-.fancyLine {
-border: 3px dotted;
-width: 60%;
-margin-left: auto;
-margin-right: auto;
-color: #111;
+
+hr.fancyLine {
+      border: 3px dotted;
+      width: 60%;
+      margin-left: auto;
+      margin-right: auto;
+      color: #111;
 }
