--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,4 +117,5 @@ hr.fancyLine {
       margin-left: auto;
       margin-right: auto;
       color: #111;
+      background: rgb(178, 210, 225);
 }
