--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -112,10 +112,10 @@ h2 {
 }
 
 hr.fancyLine {
-      border: 3px dotted;
+      border: none;
+      border-top: 3px dotted #111;
       width: 60%;
       margin-left: auto;
       margin-right: auto;
-      color: #111;
-      background: rgb(178, 210, 225);
+      background: rgba(0, 0, 0, 0.12);
 }
