--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,20 +15,20 @@ layout: default
 <div class="PageNavigation">
 
   {% if page.previous %}
-    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> {{page.previous.title}}</a>
+    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-circle-left"></i> {{page.previous.title}}</a>
     <br>
   {% endif %}
 
 
   {% if page.next %}
-    <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} <i class="fa fa-arrow-circle-right" aria-hidden="true"></i> </a>
+    <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} <i class="fa fa-arrow-circle-right"></i> </a>
   {% endif %}<br>
   
-  <a href=#top><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+  <a href=#top><i class="fa fa-arrow-up"></i></a>
   
   <a href="/"><i class='fa fa-home'></i></a>
   
-  <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane" aria-hidden="true"></i></a>
+  <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane"></i></a>
 
   
 
