--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,9 +113,9 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 3px dotted #111;
-      width: 60%;
+      border-top: 5px dotted rgba(0, 0, 0, 0.12);
+      width: 75%;
       margin-left: auto;
       margin-right: auto;
-      background: rgba(0, 0, 0, 0.06);
+      background: rgba(0, 0, 0, 0.04);
 }
