--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,9 +113,9 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 5px dotted rgba(0, 0, 0, 0.12);
+      border-top: 5px dotted #1111;
       width: 75%;
       margin-left: auto;
       margin-right: auto;
-      background: rgba(0, 0, 0, 0.04);
+      background: rgba(0, 0, 0, 0.02);
 }
