--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -119,3 +119,5 @@ hr.fancyLine {
       margin-right: auto;
       background: rgba(0, 0, 0, 0.02);
 }
+
+li:before { content: '\f138'; margin-left: -20px; margin-right: 10px; } 
