--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
     <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} <i class="fa fa-arrow-circle-right"></i> </a>
   {% endif %}<br>
   
-  <a href=#top><i class="fa fa-arrow-up"></i></a>
+  <a href=#top><i class="fa fa-arrow-up" style="size: 20px;"></i></a>
   
   <a href="/"><i class='fa fa-home'></i></a>
   
