--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,11 +113,11 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 5px dotted #1111;
+      border-top: 4px dotted;
       width: 75%;
       margin-left: auto;
       margin-right: auto;
-      background: rgba(0, 0, 0, 0.02);
+      background: rgba(0, 0, 0, 0.01);
 }
 
 li:before { content: '\f138'; margin-left: -20px; margin-right: 10px; } 
