--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,8 +113,8 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 4px dotted;
-      width: 75%;
+      border-top: 3px dotted rgb(85, 85, 85);
+      width: 68.2%;
       margin-left: auto;
       margin-right: auto;
       background: rgba(0, 0, 0, 0.01);
