--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,9 +24,9 @@ layout: default
     <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} <i class="fa fa-arrow-circle-right"></i> </a>
   {% endif %}<br>
   
-  <a href=#top><i class="fa fa-arrow-up" style="size: 30px;"></i></a>
+  <a href=#top><i class="fa fa-arrow-up fa-sm"></i></a>
   
-  <a href="/"><i class='fa fa-home'></i></a>
+  <a href="/"><i class='fa fa-home fa-lg'></i></a>
   
   <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane fa-3x"></i></a>
 
