--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,7 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 3px dotted rgb(85, 85, 85);
+      border-top: 3px dashed rgb(85, 85, 85);
       width: 68.2%;
       margin-left: auto;
       margin-right: auto;
