--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,11 +24,11 @@ layout: default
     <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} <i class="fa fa-arrow-circle-right"></i> </a>
   {% endif %}<br>
   
-  <a href=#top><i class="fa fa-arrow-up fa-sm"></i></a>
+  <a href=#top><i class="fa fa-arrow-up fa-lg"></i></a>&nbsp;
   
-  <a href="/"><i class='fa fa-home fa-lg'></i></a>
+  <a href="/"><i class='fa fa-home fa-lg'></i></a>&nbsp;
   
-  <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane fa-2x"></i></a>
+  <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane fa-lg"></i></a>
 
   
 
