--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -126,6 +126,7 @@ hr.fancyLine2 {
       margin-left: auto;
       margin-right: auto;
       background: rgba(0, 0, 0, 0.01);
+}  
 hr.fancyLine3 {
       border: none;
       border-top: 2px dashed rgb(85, 85, 85);
@@ -133,5 +134,6 @@ hr.fancyLine3 {
       margin-left: auto;
       margin-right: auto;
       background: rgba(0, 0, 0, 0.01);
+ }
 
 li:before { content: 'fa fa-rocket'; margin-left: -20px; margin-right: 10px; } 
