--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -118,22 +118,14 @@ hr.fancyLine {
       margin-left: auto;
       margin-right: auto;
       background: rgba(0, 0, 0, 0.01);
-}
-hr.fancyLine2 {
-      border: none;
-      border-top: 1.5px solid rgb(85, 85, 85);
-      width: 68.2%;
-      margin-left: auto;
-      margin-right: auto;
-      background: rgba(0, 0, 0, 0.01);
 }  
 hr.fancyLine3 {
       border: none;
-      border-top: 2px dashed rgb(85, 85, 85);
-      width: 68.2%;
+      border-top: 1px solid rgb(85, 85, 85);
+      width: 100%;
       margin-left: auto;
       margin-right: auto;
       background: rgba(0, 0, 0, 0.01);
  }
 
-li:before { content: 'fa fa-rocket'; margin-left: -20px; margin-right: 10px; } 
+li:before { content: 'f137'; margin-left: -20px; margin-right: 10px; } 
