--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,7 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 2px dotted rgb(85, 85, 85);
+      border-top: 10px solid rgb(85, 85, 85, 0.5);
       width: 68.2%;
       margin-left: auto;
       margin-right: auto;
@@ -121,7 +121,7 @@ hr.fancyLine {
 }  
 hr.fancyLine3 {
       border: none;
-      border-top: 1px solid rgb(85, 85, 85);
+      border-top: 1.5px solid rgb(85, 85, 85);
       width: 100%;
       margin-left: auto;
       margin-right: auto;
