--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,7 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 10px solid rgb(85, 85, 85, 0.5);
+      border-top: 10px solid rgba(85, 85, 85, 0.5);
       width: 68.2%;
       margin-left: auto;
       margin-right: auto;
