--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,15 +113,15 @@ h2 {
 
 hr.fancyLine {
       border: none;
-      border-top: 10px solid rgba(85, 85, 85, 0.5);
-      width: 68.2%;
-      margin-left: auto;
-      margin-right: auto;
+      border-top: 20px solid rgba(85, 85, 85, 0.1);
+      width: 100%;
+      margin-left: -10px;
+      margin-right: 10px;
       background: rgba(0, 0, 0, 0.01);
 }  
 hr.fancyLine3 {
       border: none;
-      border-top: 1.5px solid rgb(85, 85, 85);
+      border-top: 1.5px solid rgb(85, 85, 85, 0.3);
       width: 100%;
       margin-left: auto;
       margin-right: auto;
