--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -121,7 +121,7 @@ hr.fancyLine {
 }  
 hr.fancyLine3 {
       border: none;
-      border-top: 1.5px solid rgb(85, 85, 85, 0.3);
+      border-top: 1.5px solid rgba(85, 85, 85, 0.3);
       width: 100%;
       margin-left: auto;
       margin-right: auto;
