--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -127,3 +127,8 @@ hr.fancyLine3 {
       margin-right: auto;
       background: rgba(0, 0, 0, 0.01);
  }
+
+ul li::before {
+    content: "\f005";
+    font-family: "Font Awesome 5 Free";
+}
