--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -128,6 +128,10 @@ hr.fancyLine3 {
       background: rgba(0, 0, 0, 0.01);
  }
 
+ul.customList {
+    content: "";
+}
+
 ul.customList li::before{
     content: "\f005";
     font-family: "Font Awesome 5 Free";
