--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -133,6 +133,8 @@ ul.customList {
 }
 
 ul.customList li::before{
-    content: "\f005";
+    content: "\f138";
     font-family: "Font Awesome 5 Free";
+    padding: 0 10px 0 0;
+    color: #069;
 }
