--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 <div class="PageNavigation">
 
   {% if page.previous %}
-    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-circle-left"></i> {{page.previous.title}}</a>
+    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}"><i class="fa fa-arrow-circle-left"></i> <tt>{{page.previous.title}}</tt></a>
     <br>
   {% endif %}
 
