--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,10 @@
         </ul>
       </header>
       <section>
+        <h3 class="title">{{ page.title }}</h3>
 
-      {{ content }}
+        <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>
+        {{ content }}
 
       </section>
     </div>
