--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         </ul>
       </header>
       <section>
-        {% if site.github.is_project_page false %}
+        {% if site.github.is_project_page %}
         <h3 class="title">{{ page.title }}</h3>
 
         <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>
