--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,12 +48,8 @@
         {{ content }}
 
       </section>
-    </div>
-    <footer>
-    {% if site.github.is_project_page %}
-      <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-    {% endif %}
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+      
+       <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>    
       
       {% if site.github.is_project_page == false %}
         <a href=#top><i class="fa fa-arrow-up fa-lg"></i></a>&nbsp;
@@ -61,8 +57,15 @@
         <a href="/"><i class='fa fa-home fa-lg'></i></a>&nbsp;
   
         <a href="mailto:Doris%20Stoppacher%20%3Cdstoppacher@ucsc.edu%3E"><i class="fa fa-paper-plane fa-lg"></i></a>
-      {% endif %}
+      {% endif %}      
       
+    </div>
+    <footer>
+    {% if site.github.is_project_page %}
+      <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+    {% endif %}
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+            
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
