--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
         
       <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>    
         
-      {% if site.github.is_project_page == false %}
+      {% if not site.github.is_project_page %}
         <a href=#top><i class="fa fa-arrow-up fa-lg"></i></a>&nbsp;
   
         <a href="/"><i class='fa fa-home fa-lg'></i></a>&nbsp;
