--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         </ul>
       </header>
       <section>
-        {% if page.title == "" %}
+        {% if {{ page.title }} == "" %}
 
         <h3 class="title">{{ page.title }}</h3>
 
