--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -167,6 +167,7 @@ div.button_gray {
 
 div.button_white {
     font-family: monospace;
+    font-size: smaller;
     float: right;
     width: 20%;
     height: 1.5em; 
