--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,7 +171,7 @@ div.button_white {
     //float: right;
     //width: 20%;
     //height: 1.4em; 
-    margin: 0 auto;
+    //margin: 0 auto;
     margin-bottom: 25px;
     padding: 0.3em;
     border-radius: 5px;
