--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,8 +171,8 @@ div.button_white {
     //float: right;
     //width: 20%;
     //height: 1.4em; 
-    margin: 3px;
-    margin-bottom: 25px;
+    margin: 0 auto;
+    margin-bottom: 5px;
     padding: 0.3em;
     border-radius: 5px;
     text-align: center;
