--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -180,6 +180,7 @@ div.button_white {
 }
 
 div p.button_white {
+    display: inline-block;
     font-family: monospace;
     font-size: 1vw;
     margin: 0 auto;
