--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -181,6 +181,7 @@ div.button_white {
 
 p.button_white {
     display: inline-block;
+    height: 2%;
     font-family: monospace;
     font-size: 1vw;
     margin: 0 auto;
