--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -179,7 +179,7 @@ div.button_white {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
 
-p.button_white {
+div p.button_white {
     display: inline-block;
     font-family: monospace;
     font-size: 1vw;
