--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -181,8 +181,9 @@ div.button_white {
 
 div p.button_white {
     display: inline-block;
+    height: 7em
     font-family: monospace;
-    font-size: 1vw;
+    font-size: 1.5vw;
     margin: 0 auto;
     margin-bottom: 25px;
     padding: 0.3em;
